<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/principalColor"
    android:padding="20dp"
    tools:context=".AddStudentActivity">

    <!-- En-tête avec le titre -->
    <TextView
        android:id="@+id/headerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nouvel_tudiant"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/textColor"
        android:fontFamily="@font/archivo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- ImageView pour la photo -->
    <ImageView
        android:id="@+id/photoPreview"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/defaut_student_image"
        android:contentDescription="@string/nouvelle_photo"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@id/headerTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Bouton pour sélectionner une photo -->
    <Button
        android:id="@+id/btnSelectPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/s_lectionner_photo"
        android:backgroundTint="@color/accentColor"
        android:textColor="@color/white"
        android:fontFamily="@font/archivo"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/photoPreview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- EditText pour le prénom -->
    <EditText
        android:id="@+id/firstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="given_name"
        android:hint="@string/pr_noms"
        android:inputType="textPersonName"
        android:textSize="18sp"
        android:textColor="@color/textColor"
        android:fontFamily="@font/archivo"
        android:backgroundTint="@color/accentColor"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/btnSelectPhoto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp" />

    <!-- EditText pour le nom -->
    <EditText
        android:id="@+id/lastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="family_name"
        android:hint="@string/nom"
        android:inputType="textPersonName"
        android:textSize="18sp"
        android:textColor="@color/textColor"
        android:backgroundTint="@color/accentColor"
        android:padding="12dp"
        android:fontFamily="@font/archivo"
        app:layout_constraintTop_toBottomOf="@id/firstName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Bouton Enregistrer -->
    <Button
        android:id="@+id/btnSaveStudent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/enregistrer"
        android:backgroundTint="@color/accentColor"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="@font/archivo"
        app:layout_constraintTop_toBottomOf="@id/lastName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:padding="12dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
