<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/principalColor"
    tools:context=".MainActivity">

    <!-- Logo -->
    <ImageView
        android:id="@+id/icon_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/image_acc"
        android:contentDescription="@string/image_d_accueil"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"
        />

    <!-- Texte de bienvenue -->
    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bienvenu_e_en_ing_3"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@id/icon_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/textColor"
        android:fontFamily="@font/archivo"
        />

    <!-- Texte de la promotion -->
    <TextView
        android:id="@+id/promotion_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/promotion_2024_2025"
        android:textSize="30sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/welcome_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/textColor"
        android:fontFamily="@font/archivo"
        />

    <!-- Bouton Galerie -->
    <Button
        android:id="@+id/gallery_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/galerie"
        app:layout_constraintWidth_percent="0.6"
        app:layout_constraintHeight_percent="0.09"
        android:layout_marginTop="90dp"
        app:layout_constraintTop_toBottomOf="@id/promotion_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/ButtonStyle"
        android:background="@drawable/rounded"
        />

    <!-- Bouton Matières -->
    <Button
        android:id="@+id/subjects_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/mati_res"
        app:layout_constraintWidth_percent="0.6"
        app:layout_constraintHeight_percent="0.09"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/gallery_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/ButtonStyle"
        android:background="@drawable/rounded"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
